--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <h1>Javascript Promise!</h1>
+  
+  <script>
+    let promiseex =  new Promise((resolve,reject)=>{
+      let num = 10;
+      if(num > 5){
+         resolve('promise resolved');
+      }else{
+        reject('promise rejected resolved');
+      }
+    });
+  promiseex.then((res)=>{
+    document.write(res);
+  }).catch((err)=>{
+     document.write(err);
+  });
+  </script>
   </body>
 </html>
